[tool.poetry]
name = "terminal-input-test"
version = "0.1.0"
description = ""
authors = ["NewWars <15692866+OriDevTeam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
readchar = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
